name:                hills
version:             0.1.0.0

synopsis:            Generate STL models from SRTM elevation data.

description:         This program generates 3D models of areas of the
                     earth's surface.
                     .
                     It uses the SRTM 90m elevation data from
                     CGIAR-CSI which is downloadable free of charge
                     (see <http://srtm.csi.cgiar.org/>).  It outputs STL.
                     .
                     Consult the README for full instructions.

license:             BSD3
license-file:        LICENSE
author:              David Fletcher
maintainer:          david@bubblycloud.com
copyright:           (c) 2014 David Fletcher
homepage:            http://www.bubblycloud.com/hills/
category:            Geography

build-type:          Simple
extra-source-files:  README, test.sh
cabal-version:       >=1.10

executable hills
  main-is:             Main.hs

  other-modules:       Area CGIAR LatLong Model Parse Stl Topo

  build-depends:       base >=4.7 && <5,
                       array >=0.5,
                       bytestring >=0.10,
                       directory >=1.2,
                       transformers >=0.4,
                       text >=1.1,
                       optparse-applicative >=0.10

  default-language:    Haskell2010

  ghc-options:         -Wall
